--- a/src/index.css
+++ b/src/index.css
@@ -564,12 +564,12 @@ form button span::selection {
   top: 46%;
   transform: translateX(-50%) translateZ(0);
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  border-top: 7px solid #e2e7e9;
-  border-right: 7px solid #e2e7e9;
-  border-bottom: 7px solid #e2e7e9;
-  border-left: 7px solid #ccd1d3;
+  width: 50px;
+  height: 50px;
+  border-top: 7px solid #ffb700;
+  border-right: 7px solid #ffb700;
+  border-bottom: 7px solid #ffb700;
+  border-left: 7px solid #ffa600;
   animation: spinner 1s infinite linear;
 }
 
